--- a/NewAPPSER/settings.json
+++ b/NewAPPSER/settings.json
@@ -1,5 +1,5 @@
 {
    "AutoPush": false,
    "TaskLogDatasetPath": "System\\Task Execution Log",
-   "LaunchesDatasetPath": "System\\Validation Launch Log (2)"
+   "LaunchesDatasetPath": "System\\Validation Launch Log"
 }
